# qualified-imports-plugin

./: .gitignore  README.md  cabal.project  ci.nix  default.nix  qualified-imports-plugin.cabal
example/: Main.hs  example.cabal
nix/: sources.json
src/: QualifiedImportsPlugin.hs
test/: Test.hs  Test1.hs  Test2.hs
