cabal-version:       3.0

name:                qualified-imports-plugin
synopsis:            Implicitly add some qualified imports
version:             0.0.1
homepage:            https://github.com/utdemir/qualified-imports-plugin
license:             BSD-3-Clause
author:              Utku Demir
maintainer:          Utku Demir
copyright:           Utku Demir
category:            Relude
build-type:          Simple

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     QualifiedImportsPlugin
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >=4.14 && <5.0
                     , ghc >= 8.10
                     , syb
                     , containers

test-suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  other-modules:    Test1
                  , Test2
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
                    -fplugin=QualifiedImportsPlugin
  build-depends:    base
                  , qualified-imports-plugin
                  , text
